# MiroFish

./: .env.example  CLAUDE.md  README-ZH.md  README.md
.github/workflows/: pages.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  trading.py
backend/app/services/: binance_service.py  market_data_service.py  okx_service.py  report_agent.py  trading_manager.py
docs/: analisa_cashflow_2026.html  binance_loan_guardian.html  binance_loan_planner.html  btc_all_in_one_v7.html  btc_dashboard_v4.html  btc_okx_loan_dashboard.html  btc_seasonality.html  btc_seasonality_avg.html  btc_seasonality_live.html  budget_tracker_juni_2026.html  dashboard_live_v15_1.html  fif_framework_9prinsip.html  gotrade_fixed_final.html  ifbtc_revenue_planner.html  ifbtc_wealth_planner.html  ifbtc_weekly_brief.html  index.html  jurnal_diabetes_asam_urat.html  laporan_keuangan_2026_synced.html  laporan_keuangan_tahunan.html  lkh_portfolio_dashboard.html  macrocraft_terminal.html  onewallet_porto.html  podcast_mesin_uang.html  portfolio1_live_dashboard.html  portfolio_gabungan.html  profil_izzuddin.html  ringkasan_diabetes.html  sandiaga_portfolio_dashboard.html  superinvestor_comparison_dashboard.html  teguhhidayat_portfolio_dashboard.html  trading_journal_idx.html
docs/episodes/: E07-ai-belanja-pakai-kripto.md  E08-membangun-sistem-penghasil-gaji.md  E09-rwa-aset-nyata-di-blockchain.md
static/pages/: analisa_cashflow_2026.html  btc_all_in_one_v7.html  btc_seasonality_avg.html  index.html  laporan_keuangan_2026_synced.html  (+2 more)
(+6 files in other folders)
